@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-07-15T08:15:46Z",
+  "timestamp" : "2022-07-15T16:17:19Z",
   "count_outdated" : 390,
   "uniques_outdated" : 212,
   "count" : 421,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-07-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
