@@ -1,3 +1,10 @@
+2022-07-15T16:17:19Z:
+* notice: last 14d: unq all: 2 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 212 390 / 228 421
+* notice: next accum: outdated-unq outdated-all / unq all: 212 390 / 228 421
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-01 2022-07-15]
+
 2022-07-15T08:15:46Z:
 * notice: last 14d: unq all: 2 31
 * notice: prev accum: outdated-unq outdated-all / unq all: 212 390 / 228 422
